--- a/src/maketa/Makefile.in
+++ b/src/maketa/Makefile.in
@@ -53,7 +53,7 @@ am__objects_2 = maketa-ta_ti.$(OBJEXT) maketa-ta_platform.$(OBJEXT) \
 	maketa-ta_mtrnd.$(OBJEXT) maketa-ta_list.$(OBJEXT) \
 	maketa-ta_type.$(OBJEXT) maketa-mta_parse.$(OBJEXT) \
 	maketa-mta_lex.$(OBJEXT) maketa-mta_constr.$(OBJEXT) \
-	maketa-maketa.$(OBJEXT)
+	maketa-mta_gendoc.$(OBJEXT) maketa-maketa.$(OBJEXT)
 am_maketa_OBJECTS = $(am__objects_1) $(am__objects_2)
 maketa_OBJECTS = $(am_maketa_OBJECTS)
 maketa_LDADD = $(LDADD)
@@ -128,6 +128,7 @@ EXEEXT = @EXEEXT@
 GCC_FALSE = @GCC_FALSE@
 GCC_TRUE = @GCC_TRUE@
 GENDOC = @GENDOC@
+GREP = @GREP@
 HAVE_SVN = @HAVE_SVN@
 INCLUDE_AMINCLUDE_AM = @INCLUDE_AMINCLUDE_AM@
 INC_AMINCLUDE = @INC_AMINCLUDE@
@@ -201,13 +202,11 @@ WHEREAMI = @WHEREAMI@
 WINDOWS_FALSE = @WINDOWS_FALSE@
 WINDOWS_TRUE = @WINDOWS_TRUE@
 YACC = @YACC@
+YFLAGS = @YFLAGS@
 abs_srcdir = @abs_srcdir@
 abs_top_builddir = @abs_top_builddir@
-ac_ct_AR = @ac_ct_AR@
 ac_ct_CC = @ac_ct_CC@
 ac_ct_CXX = @ac_ct_CXX@
-ac_ct_RANLIB = @ac_ct_RANLIB@
-ac_ct_STRIP = @ac_ct_STRIP@
 am__fastdepCC_FALSE = @am__fastdepCC_FALSE@
 am__fastdepCC_TRUE = @am__fastdepCC_TRUE@
 am__fastdepCXX_FALSE = @am__fastdepCXX_FALSE@
@@ -224,24 +223,31 @@ build_cpu = @build_cpu@
 build_os = @build_os@
 build_vendor = @build_vendor@
 datadir = @datadir@
+datarootdir = @datarootdir@
+docdir = @docdir@
+dvidir = @dvidir@
 exec_prefix = @exec_prefix@
 host = @host@
 host_alias = @host_alias@
 host_cpu = @host_cpu@
 host_os = @host_os@
 host_vendor = @host_vendor@
+htmldir = @htmldir@
 includedir = @includedir@
 infodir = @infodir@
 install_sh = @install_sh@
 libdir = @libdir@
 libexecdir = @libexecdir@
+localedir = @localedir@
 localstatedir = @localstatedir@
 mandir = @mandir@
 mkdir_p = @mkdir_p@
 oldincludedir = @oldincludedir@
+pdfdir = @pdfdir@
 pdpexists = @pdpexists@
 prefix = @prefix@
 program_transform_name = @program_transform_name@
+psdir = @psdir@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sim_ac_coin_configcmd = @sim_ac_coin_configcmd@
@@ -273,6 +279,7 @@ SRCS = \
 	mta_parse.cpp \
 	mta_lex.cpp \
 	mta_constr.cpp \
+	mta_gendoc.cpp \
 	maketa.cpp
 
 maketa_SOURCES = $(HEADS) $(SRCS)
@@ -353,6 +360,7 @@ distclean-compile:
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/maketa-maketa.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/maketa-mta_constr.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/maketa-mta_gendoc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/maketa-mta_lex.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/maketa-mta_parse.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/maketa-ta_list.Po@am__quote@
@@ -523,6 +531,20 @@ maketa-mta_constr.obj: mta_constr.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='mta_constr.cpp' object='maketa-mta_constr.obj' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(maketa_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o maketa-mta_constr.obj `if test -f 'mta_constr.cpp'; then $(CYGPATH_W) 'mta_constr.cpp'; else $(CYGPATH_W) '$(srcdir)/mta_constr.cpp'; fi`
+
+maketa-mta_gendoc.o: mta_gendoc.cpp
+@am__fastdepCXX_TRUE@	if $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(maketa_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT maketa-mta_gendoc.o -MD -MP -MF "$(DEPDIR)/maketa-mta_gendoc.Tpo" -c -o maketa-mta_gendoc.o `test -f 'mta_gendoc.cpp' || echo '$(srcdir)/'`mta_gendoc.cpp; \
+@am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/maketa-mta_gendoc.Tpo" "$(DEPDIR)/maketa-mta_gendoc.Po"; else rm -f "$(DEPDIR)/maketa-mta_gendoc.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='mta_gendoc.cpp' object='maketa-mta_gendoc.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(maketa_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o maketa-mta_gendoc.o `test -f 'mta_gendoc.cpp' || echo '$(srcdir)/'`mta_gendoc.cpp
+
+maketa-mta_gendoc.obj: mta_gendoc.cpp
+@am__fastdepCXX_TRUE@	if $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(maketa_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT maketa-mta_gendoc.obj -MD -MP -MF "$(DEPDIR)/maketa-mta_gendoc.Tpo" -c -o maketa-mta_gendoc.obj `if test -f 'mta_gendoc.cpp'; then $(CYGPATH_W) 'mta_gendoc.cpp'; else $(CYGPATH_W) '$(srcdir)/mta_gendoc.cpp'; fi`; \
+@am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/maketa-mta_gendoc.Tpo" "$(DEPDIR)/maketa-mta_gendoc.Po"; else rm -f "$(DEPDIR)/maketa-mta_gendoc.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='mta_gendoc.cpp' object='maketa-mta_gendoc.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(maketa_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o maketa-mta_gendoc.obj `if test -f 'mta_gendoc.cpp'; then $(CYGPATH_W) 'mta_gendoc.cpp'; else $(CYGPATH_W) '$(srcdir)/mta_gendoc.cpp'; fi`
 
 maketa-maketa.o: maketa.cpp
 @am__fastdepCXX_TRUE@	if $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(maketa_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT maketa-maketa.o -MD -MP -MF "$(DEPDIR)/maketa-maketa.Tpo" -c -o maketa-maketa.o `test -f 'maketa.cpp' || echo '$(srcdir)/'`maketa.cpp; \
